Support darwin arm64

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,6 +23,16 @@ builds:
     - amd64
   ldflags:
     - -s -w -X github.com/k1LoW/awsdo.version={{.Version}} -X github.com/k1LoW/awsdo.commit={{.FullCommit}} -X github.com/k1LoW/awsdo.date={{.Date}} -X github.com/k1LoW/awsdo/version.Version={{.Version}}
+-
+  id: awsdo-darwin-arm64
+  env:
+    - CGO_ENABLED=0
+  goos:
+    - darwin
+  goarch:
+    - arm64
+  ldflags:
+    - -s -w -X github.com/k1LoW/awsdo.version={{.Version}} -X github.com/k1LoW/awsdo.commit={{.FullCommit}} -X github.com/k1LoW/awsdo.date={{.Date}} -X github.com/k1LoW/awsdo/version.Version={{.Version}}    
 archives:
 -
   id: awsdo-archive
